Quartz sync: Aug 4, 2024, 1:52 AM

--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -1,7 +1,7 @@
 {
   "defaultViewMode": "preview",
   "newLinkFormat": "absolute",
-  "useMarkdownLinks": true,
+  "useMarkdownLinks": false,
   "newFileLocation": "root",
   "showUnsupportedFiles": true,
   "attachmentFolderPath": "./Attachments",
