--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@ tsconfig.tsbuildinfo
 private/
 .replit
 replit.nix
-.obsidian/workspace.json
-.obsidian/graph.json
-.obsidian/plugins
+content/.obsidian/workspace.json
+content/.obsidian/graph.json
+content/.obsidian/plugins/
