--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Diyaagrams.com
+name: diyaagrams.com
 
 on:
   push:
@@ -23,7 +23,7 @@ jobs:
           fetch-depth: 0 # Fetch all history for git info
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 'lts/iron'
       - name: Install Dependencies
         run: npm ci
       - name: Build Quartz
