--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -5,5 +5,6 @@
   "newFileLocation": "root",
   "showUnsupportedFiles": true,
   "attachmentFolderPath": "./Attachments",
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "livePreview": false
 }
