Quartz sync: Aug 17, 2024, 9:59 PM

--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -6,5 +6,5 @@
   "showUnsupportedFiles": true,
   "attachmentFolderPath": "./Attachments",
   "alwaysUpdateLinks": true,
-  "livePreview": false
+  "livePreview": true
 }
