Quartz sync: Aug 18, 2024, 11:58 AM

--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -6,5 +6,8 @@
   "showUnsupportedFiles": true,
   "attachmentFolderPath": "./Attachments",
   "alwaysUpdateLinks": true,
-  "livePreview": true
+  "livePreview": true,
+  "foldHeading": false,
+  "showLineNumber": true,
+  "showInlineTitle": false
 }
