Quartz sync: Aug 18, 2024, 12:46 PM

--- a/content/.obsidian/app.json
+++ b/content/.obsidian/app.json
@@ -9,5 +9,6 @@
   "livePreview": true,
   "foldHeading": false,
   "showLineNumber": true,
-  "showInlineTitle": false
+  "showInlineTitle": false,
+  "propertiesInDocument": "visible"
 }
